--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         2.) Create new solution file and work on writing, solving, testing in VS Code and Chrome
         3.) Copy over to Codewars to test there when satisfied
         *** if can't figure out on own, look at solution then re-write in own "words"
-        4.) Push it to Git Hub-->
+        4.) commit and push it to GitHub-->
 
 <!DOCTYPE html>
 <html lang="en">
