--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         1.) Get prompt from Codewars
         2.) Create new solution file and work on writing, solving, testing in VS Code and Chrome
         3.) Copy over to Codewars to test there when satisfied
-        *** if can't figure out on own, look at solution then re-write in own "words"
+        *** if can't figure out on own, look at solution then re-write in own words
         4.) commit and push it to GitHub-->
 
 <!DOCTYPE html>
