--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>Living in CodeWars Time</title>
 </head>
 <body>
-    
+    <h1>Living in CodeWars Time</h1>
     <script src="js/solution005.js"></script>
 </body>
 </html>
